--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -4,9 +4,9 @@
         "separator",
         "host",
         "os",
-        "uptime",
         "terminal",
         "shell",
+        "editor",
         "cpu",
         "gpu",
         "memory",
@@ -16,6 +16,6 @@
         "break",
         "break",
         "datetime",
-        "weather"
+        "uptime"
     ]
 }
