replace hostname in fastfetch title with emoji
Signed-off-by: Konstantin Tutsch <mail@konstantintutsch.com>

--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -3,7 +3,10 @@
         "height": 16
     },
     "modules": [
-        "title",
+        {
+            "type": "title",
+            "format": "{user-name-colored}{at-symbol-colored}💻"
+        },
         "separator",
         "host",
         "os",
