--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -3,10 +3,7 @@
         "height": 16
     },
     "modules": [
-        {
-            "type": "title",
-            "format": "{user-name-colored}{at-symbol-colored}💻"
-        },
+        "title",
         "separator",
         "host",
         "os",
